Saved a my final model and data for making a small dashboard using Streamlit

--- a/Energy_consumption_at_houses.ipynb
+++ b/Energy_consumption_at_houses.ipynb
@@ -2575,8 +2575,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "78df3de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "\n",
+    "joblib.dump(rf, \"energy_model.pkl\")\n",
+    "print(\"Model saved successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "3b730969",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hourly dataset saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "hourly_data.to_csv(\"hourly_data.csv\", index=True)\n",
+    "print(\"Hourly dataset saved successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e13e8a98",
    "metadata": {},
    "outputs": [],
    "source": []
